v3.3.0 (2020.05.XX)
  - Refactor recordings database table to utilize HDHomeRun RECORD engine series update identifiers

v3.2.2 (2020.04.23)
  - Update cURL library to version 7.69.1
  - Adapt to HDHomeRun RECORD engine 20200318 breaking changes
  - Apply recording rule start and end time padding deltas to the reported start and end times for timer instances
  - Omit reporting of original air date for programs of type News/Current Affairs unless a specific season/episode is specified
  - De-duplicate the list of reported timer instances so that only the first airing of an unrecorded program is shown
  - Add "Disable blocking of DRM protected channel streams" advanced option

v3.2.1 (2020.03.06)
  - Update cURL library to version 7.69.0
  - Update libhdhomerun library to version 20200303
  - Add "Disable backend channel logo images" option
  - Add new "Interface" settings category and move options that change how data is displayed from "General" to "Interface"

v3.2.0 (2020.02.07)
  - Update SQLite database engine to version 3.31.1
  - Update cURL library to version 7.68.0
  - Use "Filename" attribute provided by HDHomeRun RECORD instead of manually generating EDL file name(s) when available
  - Exclude episodes marked as "DeletedDontRerecord" from the list of reported timer instances
  - Exclude episodes marked as "RecordIfNotRecorded" from the list of reported timer instances when a completed recording exists
  - Prevent missing channel(s) in the Electronic Program Guide (EPG) listings from causing unncessary XMLTV reload operations
  - Fix bug preventing calculation of original air date values for programs that aired prior to 1970.01.01
  - Limit reporting of program year to programs of type MV (Movies) in Electronic Program Guide (EPG) and Recorded TV
  - Limit reporting of program original air date to programs of type EP (Series Episode) and SH (Show) in Electronic Program Guide (EPG)