@@ -1,5 +1,7 @@
 v3.3.0 (2020.05.XX)
   - Refactor recordings database table to utilize HDHomeRun RECORD engine series update identifiers
+  - Add "Preferred channel name format" interface setting
+  - Remove "Use channel names from tuner device(s) in channel lineups" interface setting
 
 v3.2.2 (2020.04.23)
   - Update cURL library to version 7.69.1
